Fixed stretched pfps i think?

--- a/core/static/core/css/detail.css
+++ b/core/static/core/css/detail.css
@@ -159,6 +159,7 @@ li {
 
 .member-image {
     height: 32px;
+    width: 32px;
     margin-right: 10px;
 }
 
